<resources>
    <string name="app_name">bankodemia</string>
    <string name="hind_mail">Correo</string>
    <string name="login">Iniciar Sesión</string>
    <string name="mail">Escribe tu correo</string>
    <string name="password">Escribe tu contraseña</string>
    <string name="instructions_login">Escribe el correo y teléfono con el que te registraste, a través de estos te enviaremos el acceso</string>
    <string name="need_help">¿Necesitas ayuda? Escríbenos a</string>
    <string name="bankodemia_mail">bankodemia@com.mx</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_information">Aquí recibirás comprobantes de tus movimientos e información sobre tu cuenta</string>
    <string name="information_privacy_notice">Al tocar continuar, aceptas nuestro</string>
    <string name="privacy_notice">Aviso de privacidad</string>
    <string name="continue_b">Continuar</string>
    <string name="enter_data">Ingresa tus datos</string>
    <string name="instructions_data">Escríbelos tal como aparecen en tu identificación oficial sin abreviaturas</string>
    <string name="announcement_consent">Nunca la usaremos sin tu consentimiento.</string>
    <string name="announcement_identity">Esta información es necesaria para verificar tu identidad.</string>
    <string name="name">Nombre(s)</string>
    <string name="last_name">Apellido(s)</string>
    <string name="occupation">Ocupación</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="instructions_telephone">Escribe tu teléfono</string>
    <string name="hind_telephone">Tú número de celular</string>
    <string name="instructions_telephone_textinput">Lo usarás para iniciar sesión</string>
    <string name="instructions_send_sms">Para proteger tu cuenta, te enviaremos un código vía SMS.</string>
    <string name="welcome_message">¡Adiós a las complicaciones!</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="welcome2">Usa el dinero a TU manera</string>
    <string name="waiting_transaction">Espera un momento, estamos procesando tu transacción</string>
    <string name="successful_transaction">Tu transacción ha sido finalizada</string>
    <string name="go_back_home">Volver a Inicio</string>
    <string name="successfulAdded_contact">Tu contacto fue agregado con éxito</string>
    <string name="sending_data">Espera un momento, estamos enviando tus datos</string>
    <string name="confirmation">¡Listo! Recibimos tu información. Usualmente tardamos unos minutos en verificar, pero en caso de tener algún problema, nos comunicaremos contigo.</string>
    <string name="thanks">¡GRACIAS POR USAR BANKODEMIA!</string>
    <string name="password_b">Contraseña</string>
    <string name="instructions_password">Lo usarás para entrar a la app y confirmar tus transacciones. \n Usa al menos 6 caracteres alfanuméricos, no consecutivos ni repetidos.</string>
    <string name="create_password">Crear Contraseña</string>
    <string name="confirm_password">Confirma tu contraseña</string>
    <string name="instractions_safe_password">Crea una contraseña segura</string>
    <string name="identity">Identidad</string>
    <string name="identityInstructions">Deberás subir una fotografía de tu INE o pasaporte vigente y tomarte una selfie. Si eres extranjero necesitarás una fotografía de tu documento migratorio (FM3)</string>
    <string name="identityInstructionsTitle">Ahora, vamos a verificar tu identidad para proteger tu cuenta.</string>
    <string name="understood">Entendido</string>
    <string name="identityMenuInstructions">Seleccionado el tipo de documento que deseas fotografiar</string>
    <string name="known">Conoce</string>
    <string name="documentProtection">cómo protegemos tus documentos</string>
    <string name="ine">INE</string>
    <string name="migratoryDocument">DOCUMENTO MIGRATORIO</string>
    <string name="passport">PASAPORTE</string>
    <string name="ineInstructions">Dale permiso a Bankodemia para utilizar la cámara. Asegúrate de tener buena luz y enfocar bien tu documento de frente.</string>
    <string name="uploadInformation">Subir Información</string>
    <string name="documentMigratory">Documento Migratorio</string>
    <string name="confirmPassword">Confirma tu contraseña</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="available_money">DINERO DISPONIBLE</string>
    <string name="available_money_amount">$ s%</string>
    <string name="send">Enviar</string>
    <string name="receive">Recibir</string>
    <string name="date_and_time">FECHA Y HORA</string>
    <string name="transaction_id">ID DE TRANSACCIÒN</string>
    <string name="concept">CONCEPTO</string>
    <string name="issuer_account">CUENTA EMISORA</string>
    <string name="account_number">Nùmero de cuenta</string>
    <string name="transaction_detail">Detalle de transacciòn</string>
    <string name="user_information">User Information</string>
    <string name="send_money">Enviar Dinero</string>
    <string name="transfer">Transferencia</string>
    <string name="quantity">CANTIDAD</string>
    <string name="pay_concept">CONCEPTO DE PAGO (OPCIONAL)</string>
    <string name="send_to">ENVIAR A</string>
    <string name="add_contact">Agregar contacto</string>
    <string name="digits">18 dìgitos</string>
    <string name="card">Tarjeta</string>
    <string name="clabe">CLABE</string>
    <string name="institution">Institución</string>
    <string name="notification_mail">Correo de notificación</string>
    <string name="card_capital">TARJETA</string>
    <string name="card_number">N° de Tarjeta</string>
    <string name="validity">Vigencia</string>
    <string name="cvv">CVV</string>
    <string name="mastercard">MasterCard</string>
    <string name="services">SERVICIOS</string>
    <string name="recharge_cell">Recarga de celular</string>
    <string name="recharge_providers">Telcel, ATT, Movistar</string>
    <string name="mobil_plan">Plan Móvil</string>
    <string name="mobil_providers">Telcel, ATT, Movistar</string>
    <string name="internet_tv_telephone">Internet/TV/Teléfono</string>
    <string name="internet_providers">Telmex, Izzi, TotalPlay</string>
    <string name="gas">Gas</string>
    <string name="gas_providers">Naturgy y Compañía Mexicana</string>
    <string name="credit_cards">Tarjetas de crédito</string>
    <string name="card_providers">BBVA, Santander, Banorte, Banamex</string>
    <string name="stores">Tiendas departamentales</string>
    <string name="stores_names">Liverpool, Sears, Palacio de Hierro</string>
    <string name="zero">$ 0.00</string>
    <string name="helper_required">Requerido</string>
    <string name="helper_mail_no_valid">Correo invalido</string>
    <string name="helper_password_no_valid">Contraseña Invalida</string>
    <string name="helper_text_no_valid">Texto invalido</string>
    <string name="helper_number_no_valid">Numero invalido</string>
    <string name="helper_phone_no_valid">Telefono invalido</string>
    <string name="helper_date_no_valid">Fecha invalida</string>
    <string name="helper_fields_no_match">Los campos no coinciden</string>
    <string name="make_transfer">Hacer Transferencia</string>
    <string name="cards">Tarjetas</string>
    <string name="servicies_lowercase">Servicios</string>
    <string name="time_left">Tiempo restante:</string>
    <string name="deposit">Depositar</string>
    <string name="deposit_description">¿Necesitas dinero?\n\n No te preocupes solo tendras que pulsar el boton lo mas rapido que puedas para sumar dinero y que puedas depositarlo a tu cuenta.\n\n ¡Suerte!</string>
    <string name="begin">Empezar</string>
    <string name="cancel">Cancelar</string>
    <string name="enter_email">Ingresa tu correo</string>
    <string name="enter_telephone">Ingresa tu telefono</string>
    <string name="enter_type_document">Tipo de identificacion</string>
    <string name="lada_internacional">Lada Internacional</string>
    <string name="Country">País</string>
    <string name="lada_default">+52</string>
    <string name="successDeposit">Tu deposito de $%s se realizo satisfactoriamente a tu cuenta</string>
    <string name="token">token</string>
    <string name="add_user">Añadir usuario</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="invalid_amount">Monto invalido</string>
    <string name="default_concept">Transferencia</string>
    <string name="confirm_transfer">CONFIRMACIÓN DE TRASNFERENCIA</string>
    <string name="confirm_transfer_description">¿Estás segura(o) que quieres realizar esta transacctión?</string>
    <string name="confirm">Aceptar</string>
    <string name="saved_mail">saved_mail</string>
    <string name="saved_name">saved_name</string>
    <string name="saved_last_name">saved_last_name</string>
    <string name="saved_ocuppation">saved_ocuppation</string>
    <string name="saved_birthday">saved_birthday</string>
    <string name="saved_birthday_format">saved_birthday_format</string>
    <string name="saved_telephone">saved_telephone</string>
    <string name="saved_telephone_format">saved_telephone_format</string>
    <string name="instructions_camera">Presiona aqui para tomar foto de tu documento</string>
    <string name="saved_image_string">saved_image_string</string>
    <string name="saved_image_path">saved_image_path</string>
    <string name="saved_document">document</string>
    <string name="delete_contact">Eliminar contacto</string>
    <string name="delete_contact_description">¿Desea eliminar el contacto?</string>
    <string name="delete">Eliminar Contacto</string>
    <string name="edit">Editar contacto</string>
    <string name="acept">Aceptar</string>
    <string name="item_name_example">Roberto</string>
    <string name="item_id_example">28ffhnf274bb7454</string>
    <string name="bankodemia">BANKODEMIA</string>
    <string name="edit_contact">Editar contacto</string>
    <string name="successful_edited_contact">Tu contacto se editó con exito</string>
    <string name="go_back_send">Volver a contactos</string>
</resources>