<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.IdentityMenuFragment"
    android:background="@color/white">

    <include
        android:id="@+id/identityMenuTemplateTopLogoSingle"
        layout="@layout/template_toplogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/identityMenuBtnBackToIdentity"
        style="@style/backTextButtonIconGray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_size_middle"
        android:layout_marginTop="@dimen/common_size_min"
        android:text="@string/identity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identityMenuTemplateTopLogoSingle"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/identityMenuTvIdentityMenuInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_size_middle"
        android:layout_marginTop="@dimen/common_size_default"
        android:text="@string/identityMenuInstructions"
        android:textAppearance="@style/contentText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/identityMenuBtnBackToIdentity"
        app:layout_constraintStart_toStartOf="@+id/identityMenuBtnBackToIdentity"
        app:layout_constraintTop_toBottomOf="@+id/identityMenuBtnBackToIdentity" />

    <TextView
        android:id="@+id/identityMenuTvknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/known"
        android:textAppearance="@style/contentTextVariant"
        app:layout_constraintBottom_toBottomOf="@+id/identityMenuTvDocumentProtection"
        app:layout_constraintTop_toTopOf="@+id/identityMenuTvDocumentProtection" />

    <TextView
        android:id="@+id/identityMenuTvDocumentProtection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/documentProtection"
        android:textAppearance="@style/contentTextVariantPurple"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_size_middle"
        android:layout_marginBottom="@dimen/common_size_large"
        app:constraint_referenced_ids="identityMenuTvknown,identityMenuTvDocumentProtection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/identityMenuBtnIne"
        style="@style/forwardTextButtonIconGray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_large"
        android:text="@string/ine"
        app:layout_constraintEnd_toEndOf="@+id/identityMenuTvIdentityMenuInstructions"
        app:layout_constraintStart_toStartOf="@+id/identityMenuTvIdentityMenuInstructions"
        app:layout_constraintTop_toBottomOf="@+id/identityMenuTvIdentityMenuInstructions" />

    <Button
        android:id="@+id/identityMenuBtnDocument"
        style="@style/forwardTextButtonIconGray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_default"
        android:text="@string/migratoryDocument"
        app:layout_constraintEnd_toEndOf="@+id/identityMenuBtnIne"
        app:layout_constraintStart_toStartOf="@+id/identityMenuBtnIne"
        app:layout_constraintTop_toBottomOf="@+id/identityMenuBtnIne" />

    <Button
        android:id="@+id/identityMenuBtnPassport"
        style="@style/forwardTextButtonIconGray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_default"
        android:text="@string/passport"
        app:layout_constraintEnd_toEndOf="@+id/identityMenuBtnDocument"
        app:layout_constraintStart_toStartOf="@+id/identityMenuBtnDocument"
        app:layout_constraintTop_toBottomOf="@+id/identityMenuBtnDocument" />

</androidx.constraintlayout.widget.ConstraintLayout>