<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.DataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/dataTemplateTopBarSingle"
            layout="@layout/template_toplogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dataBtnBackToCreateAccount"
            style="@style/backTextButtonIconGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_size_middle"
            android:layout_marginTop="@dimen/common_size_min"
            android:text="@string/enter_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataTemplateTopBarSingle" />

        <TextView
            android:id="@+id/dataTvDataInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_size_middle"
            android:layout_marginTop="@dimen/common_size_min"
            android:text="@string/instructions_data"
            android:textAppearance="@style/contentText"
            app:layout_constraintEnd_toEndOf="@+id/dataBtnBackToCreateAccount"
            app:layout_constraintStart_toStartOf="@+id/dataBtnBackToCreateAccount"
            app:layout_constraintTop_toBottomOf="@+id/dataBtnBackToCreateAccount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dataTilName"
            style="@style/outlinedTextFieldBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_size_middle"
            android:layout_marginTop="@dimen/common_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dataTvDataInstructions">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dataTietName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dataTilLastName"
            style="@style/outlinedTextFieldBlue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_large"
            app:layout_constraintEnd_toEndOf="@+id/dataTilName"
            app:layout_constraintStart_toStartOf="@+id/dataTilName"
            app:layout_constraintTop_toBottomOf="@+id/dataTilName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dataTietLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dataTilOccupation"
            style="@style/outlinedTextFieldBlue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_large"
            app:layout_constraintEnd_toEndOf="@+id/dataTilLastName"
            app:layout_constraintStart_toStartOf="@+id/dataTilLastName"
            app:layout_constraintTop_toBottomOf="@+id/dataTilLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dataTietOccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/occupation"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dataTilBirthday"
            style="@style/outlinedTextFieldBlue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_large"
            app:layout_constraintBottom_toTopOf="@+id/dataTvConsentInstructions"
            app:layout_constraintEnd_toEndOf="@+id/dataTilOccupation"
            app:layout_constraintStart_toStartOf="@+id/dataTilOccupation"
            app:layout_constraintTop_toBottomOf="@+id/dataTilOccupation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dataTietBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:inputType="date"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/dataTvConsentInstructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_extra_large"
            android:text="@string/announcement_identity"
            android:textAppearance="@style/contentText"
            app:layout_constraintEnd_toEndOf="@+id/dataTilBirthday"
            app:layout_constraintStart_toStartOf="@+id/dataTilBirthday"
            app:layout_constraintTop_toBottomOf="@+id/dataTilBirthday" />

        <TextView
            android:id="@+id/dataTvConsentNotice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_min"
            android:text="@string/announcement_consent"
            android:textAppearance="@style/contentTextPurple"
            app:layout_constraintEnd_toEndOf="@+id/dataTvConsentInstructions"
            app:layout_constraintStart_toStartOf="@+id/dataTvConsentInstructions"
            app:layout_constraintTop_toBottomOf="@+id/dataTvConsentInstructions" />

        <Button
            android:id="@+id/dataBtnContinue"
            style="@style/disabledButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/common_size_extra_large"
            android:text="@string/continue_b"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/dataTilBirthday"
            app:layout_constraintStart_toStartOf="@+id/dataTilBirthday"
            app:layout_constraintTop_toBottomOf="@+id/dataTvConsentNotice"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>